# snip

./: README.md  pyproject.toml
snip/: __init__.py  cli.py  models.py  service.py  storage.py
tests/: test_cli.py
