[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "snip"
version = "0.1.0"
description = "Store and run named shell command snippets"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenAI" }]
keywords = ["cli", "snippets", "commands"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]

[project.scripts]
snip = "snip.cli:main"

[tool.setuptools]
packages = ["snip"]
